# iot-logic-processor

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: api.py  consumer.py  producer.py  tasks.py
config/: settings.py
scripts/: mock_machines.py
